--- a/S08-A/pagina01.html
+++ b/S08-A/pagina01.html
@@ -19,7 +19,7 @@
      <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     
     <title>Document</title>
-    <link rel="stylesheet" href="/Users/Adrien/Desktop/S08-A/css.css">
+    <link rel="stylesheet" href="/S08-A/css.css">
 
 
 
@@ -42,8 +42,8 @@
   <!-- Slide Show -->
 <section>
     <img class="mySlides" src="/Users/Adrien/Desktop/Inspiration/B-SLANDERS-1-e1474388010384.jpg" style="width:100%">
-    <img class="mySlides" src="/Users/Adrien/Desktop/S08-A/Source/foto2.jpg" style="width:100%">
-    <img class="mySlides" src="/Users/Adrien/Desktop/S08-A/Source/foto1.jpeg" style="width:100%">
+    <img class="mySlides" src="/S08-A/Source/foto2.jpg" style="width:100%">
+    <img class="mySlides" src="/S08-A/Source/foto1.jpeg" style="width:100%">
 
 
 
