--- a/S08-A/pagina01.html
+++ b/S08-A/pagina01.html
@@ -72,7 +72,11 @@
   <div class="mt-4 p-5 bg-primary text-white rounded">
     <h1>Surrealism</h1>
     <p>Surrealism, movement in visual art and literature, flourishing in Europe between World Wars I and II. Surrealism grew principally out of the earlier Dada movement, which before World War I produced works of anti-art that deliberately defied reason; but Surrealism’s emphasis was not on negation but on positive expression. The movement represented a reaction against what its members saw as the destruction wrought by the “rationalism” that had guided European culture and politics in the past and that had culminated in the horrors of World War I. According to the major spokesman of the movement, the poet and critic André Breton, who published The Surrealist Manifesto in 1924, Surrealism was a means of reuniting conscious and unconscious realms of experience so completely that the world of dream and fantasy would be joined to the everyday rational world in “an absolute reality, a surreality.” Drawing heavily on theories adapted from Sigmund Freud, Breton saw the unconscious as the wellspring of the imagination. He defined genius in terms of accessibility to this normally untapped realm, which, he believed, could be attained by poets and painters alike.</p>
-  </div>
+  <br>
+      <h2>Characteristics</h2>
+      In the poetry of Breton, Paul Éluard, Pierre Reverdy, and others, Surrealism manifested itself in a juxtaposition of words that was startling because it was determined not by logical but by psychological—that is, unconscious—thought processes. Surrealism’s major achievements, however, were in the field of painting. Surrealist painting was influenced not only by Dadaism but also by the fantastic and grotesque images of such earlier painters as Hieronymus Bosch and Francisco Goya and of closer contemporaries such as Odilon Redon, Giorgio de Chirico, and Marc Chagall. The practice of Surrealist art strongly emphasized methodological research and experimentation, stressing the work of art as a means for prompting personal psychic investigation and revelation. Breton, however, demanded firm doctrinal allegiance. Thus, although the Surrealists held a group show in Paris in 1925, the history of the movement is full of expulsions, defections, and personal attacks.
+      
+    </div>
   
 
 
