--- a/S08-A/pagina01.html
+++ b/S08-A/pagina01.html
@@ -41,7 +41,7 @@
 
   <!-- Slide Show -->
 <section>
-    <img class="mySlides" src="/Users/Adrien/Desktop/Inspiration/B-SLANDERS-1-e1474388010384.jpg" style="width:100%">
+    <img class="mySlides" src="/S08-A/sUdgvu.webp" style="width:100%">
     <img class="mySlides" src="/S08-A/Source/foto2.jpg" style="width:100%">
     <img class="mySlides" src="/S08-A/Source/foto1.jpeg" style="width:100%">
 
