--- a/S08-A/gallery.html
+++ b/S08-A/gallery.html
@@ -23,12 +23,12 @@
         <a href="#about">About</a>
       </div> 
       
-      <img src="/Users/Adrien/Desktop/Inspiration/imagen4.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
-      <img src="/Users/Adrien/Desktop/Inspiration/imagen5.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
-      <img src="/Users/Adrien/Desktop/Inspiration/Imagen9.webp" class="img-thumbnail" alt="surrealism" width="600" height="400">
-      <img src="/Users/Adrien/Desktop/Inspiration/imagen6.png" class="img-thumbnail" alt="surrealism" width="600" height="400">
-      <img src="/Users/Adrien/Desktop/Inspiration/imagen8.webp" class="img-thumbnail" alt="surrealism"width="600" height="400">
-      <img src="/Users/Adrien/Desktop/Inspiration/imagen7.jpg" class="img-thumbnail" alt="surrealism"width="600" height="400">
+      <img src="/imagen4.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
+      <img src="/imagen5.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
+      <img src="imagen6.png" class="img-thumbnail" alt="surrealism" width="600" height="400">
+      <img src="/imagen7.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
+      <img src="/imagen8.webp" class="img-thumbnail" alt="surrealism"width="600" height="400">
+      <img src="/imagen9.webp" class="img-thumbnail" alt="surrealism"width="600" height="400">
 
 
 
