--- a/S08-A/gallery.html
+++ b/S08-A/gallery.html
@@ -18,7 +18,7 @@
     <!-- Navigation -->
     <div class="topnav">
         <a class="active" href="pagina01.html">Home</a>
-        <a href="#gallery">Gallery</a>
+        <a href="gallery.html">Gallery</a>
         <a href="#blog">Blog</a>
         <a href="#about">About</a>
       </div> 
