--- a/S08-A/pagina01.html
+++ b/S08-A/pagina01.html
@@ -33,7 +33,7 @@
    <!-- Navigation -->
    <div class="topnav">
     <a class="active" href="#home">Home</a>
-    <a href="#gallery">GALLERY</a>
+    <a href="gallery.html">Gallery</a>
     <a href="#blog">Blog</a>
     <a href="#about">About</a>
   </div>
