--- a/S08-A/gallery.html
+++ b/S08-A/gallery.html
@@ -17,18 +17,18 @@
 <body>
     <!-- Navigation -->
     <div class="topnav">
-        <a class="active" href="pagina01.html">Home</a>
+        <a class="active" href="/S08-A/pagina01.html">Home</a>
         <a href="#gallery">Gallery</a>
         <a href="#blog">Blog</a>
         <a href="#about">About</a>
       </div> 
       
-      <img src="/imagen4.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
-      <img src="/imagen5.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
-      <img src="imagen6.png" class="img-thumbnail" alt="surrealism" width="600" height="400">
-      <img src="/imagen7.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
-      <img src="/imagen8.webp" class="img-thumbnail" alt="surrealism"width="600" height="400">
-      <img src="/imagen9.webp" class="img-thumbnail" alt="surrealism"width="600" height="400">
+      <img src="/S08-A/imagen4.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
+      <img src="/S08-A/imagen5.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
+      <img src="/S08-Aimagen6.png" class="img-thumbnail" alt="surrealism" width="600" height="400">
+      <img src="/S08-A/imagen7.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
+      <img src="/S08-A/imagen8.webp" class="img-thumbnail" alt="surrealism"width="600" height="400">
+      <img src="/S08-A/imagen9.webp" class="img-thumbnail" alt="surrealism"width="600" height="400">
 
 
 
