--- a/S08-A/gallery.html
+++ b/S08-A/gallery.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
-    <link rel="stylesheet" href="/Users/Adrien/Desktop/S08-A/css.css">
+    <link rel="stylesheet" href="/S08-A/css.css">
 
 
 
@@ -24,7 +24,7 @@
       </div> 
       
       <img src="/S08-A/imagen4.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
-      <img src="/S08-A/imagen5.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
+      <img src="/S08-A/imagen.10.png" class="img-thumbnail" alt="surrealism" width="600" height="400">
       <img src="/S08-Aimagen6.png" class="img-thumbnail" alt="surrealism" width="600" height="400">
       <img src="/S08-A/imagen7.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
       <img src="/S08-A/imagen8.webp" class="img-thumbnail" alt="surrealism"width="600" height="400">
