--- a/S08-A/gallery.html
+++ b/S08-A/gallery.html
@@ -24,11 +24,11 @@
       </div> 
       
       <img src="/S08-A/imagen4.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
-      <img src="/S08-A/imagen10.png" class="img-thumbnail" alt="surrealism" width="600" height="400">
+      <img src="/S08-A/image10.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
       <img src="/S08-A/imagen6.png" class="img-thumbnail" alt="surrealism" width="600" height="400">
       <img src="/S08-A/imagen7.jpg" class="img-thumbnail" alt="surrealism" width="600" height="400">
       <img src="/S08-A/imagen8.webp" class="img-thumbnail" alt="surrealism"width="600" height="400">
-      <img src="/S08-A/imagen9.webp" class="img-thumbnail" alt="surrealism"width="600" height="400">
+      <img src="/S08-A/Imagen9.webp" class="img-thumbnail" alt="surrealism"width="600" height="400">
 
 
 
